[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthlock"
version = "0.1.0"
description = "Official Python SDK for the Truthlocks verification platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Truthlocks", email = "support@truthlocks.com" },
]
keywords = [
    "truthlock",
    "verification",
    "attestation",
    "cryptographic-proof",
    "trust",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://truthlocks.com"
Documentation = "https://docs.truthlocks.com/sdk/python"
Repository = "https://github.com/truthlocks/sdk-python"
Issues = "https://github.com/truthlocks/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/truthlock"]

[tool.ruff]
target-version = "py39"
line-length = 100
